maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:24: error: Unmatched closing brace '}' ignored here
}
^